{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 16,
  "lineage": "15b9889e-2b8f-23ee-4544-f83a3d302b10",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "forNat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-089962ab4dec68ec5",
            "public_dns": "ec2-52-74-243-179.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.74.243.179",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b4dd9d65556cac22",
            "arn": "arn:aws:ec2:ap-southeast-1:348320516530:instance/i-086bd0d7028eba9cd",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-086bd0d7028eba9cd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0a12b2410cb38649a",
            "private_dns": "ip-172-16-3-10.ap-southeast-1.compute.internal",
            "private_ip": "172.16.3.10",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-017dcda91ae54ff6a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098fe4ce55ed60f70",
            "tags": {
              "Name": "sql database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dce0379f42c2dfdd"
            ]
          },
          "dependencies": [
            "aws_security_group.MySQLDB",
            "aws_security_group.WebApp",
            "aws_subnet.db",
            "aws_vpc.kas_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "phpapp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b4dd9d65556cac22",
            "arn": "arn:aws:ec2:ap-southeast-1:348320516530:instance/i-0a3b865ee08807825",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a3b865ee08807825",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-06b5611c40b4cf5d2",
            "private_dns": "ip-172-16-0-185.ap-southeast-1.compute.internal",
            "private_ip": "172.16.0.185",
            "public_dns": "ec2-13-229-211-57.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.211.57",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00b4f7f1607d6a581",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6246283d2e449a1",
            "tags": {
              "Name": "My Web App"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bec10ec56b4fd385"
            ]
          },
          "dependencies": [
            "aws_security_group.WebApp",
            "aws_subnet.web",
            "aws_vpc.kas_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0846c9b882f3f4214",
            "owner_id": "348320516530",
            "tags": {
              "Name": "internet gw terraform generated"
            },
            "vpc_id": "vpc-04f52da4cdfdeef9f"
          },
          "dependencies": [
            "aws_vpc.kas_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089962ab4dec68ec5",
            "id": "nat-0f0c143decefc558c",
            "network_interface_id": "eni-03f11602cb4fa74ff",
            "private_ip": "172.16.0.147",
            "public_ip": "52.74.243.179",
            "subnet_id": "subnet-0f6246283d2e449a1"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_subnet.web",
            "aws_vpc.kas_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 2,
                "to_port": 0
              }
            ],
            "id": "acl-06b22aba2e0df9778",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              }
            ],
            "owner_id": "348320516530",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": {
              "Name": "open acl"
            },
            "vpc_id": "vpc-04f52da4cdfdeef9f"
          },
          "dependencies": [
            "aws_vpc.kas_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-049e57931ac6451ee",
            "owner_id": "348320516530",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0f0c143decefc558c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private"
            },
            "vpc_id": "vpc-04f52da4cdfdeef9f"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.web",
            "aws_subnet.web",
            "aws_vpc.kas_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ca9f1532dc0b9a54",
            "owner_id": "348320516530",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0846c9b882f3f4214",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "vpc_id": "vpc-04f52da4cdfdeef9f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.kas_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cb91fc0908a64a5",
            "route_table_id": "rtb-049e57931ac6451ee",
            "subnet_id": "subnet-098fe4ce55ed60f70"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.web",
            "aws_route_table.private",
            "aws_subnet.db",
            "aws_subnet.web",
            "aws_vpc.kas_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be549db9a92293e5",
            "route_table_id": "rtb-0ca9f1532dc0b9a54",
            "subnet_id": "subnet-0f6246283d2e449a1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.web",
            "aws_vpc.kas_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MySQLDB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:348320516530:security-group/sg-0dce0379f42c2dfdd",
            "description": "ONLY tcp CONNECTION INBOUND",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dce0379f42c2dfdd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bec10ec56b4fd385"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "MySQLDB",
            "name_prefix": null,
            "owner_id": "348320516530",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySQLDB"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f52da4cdfdeef9f"
          },
          "dependencies": [
            "aws_security_group.WebApp",
            "aws_vpc.kas_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebApp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:348320516530:security-group/sg-0bec10ec56b4fd385",
            "description": "ONLY HTTP CONNECTION INBOUND",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bec10ec56b4fd385",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebApp",
            "name_prefix": null,
            "owner_id": "348320516530",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebApp"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f52da4cdfdeef9f"
          },
          "dependencies": [
            "aws_vpc.kas_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:348320516530:subnet/subnet-098fe4ce55ed60f70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-098fe4ce55ed60f70",
            "map_public_ip_on_launch": false,
            "owner_id": "348320516530",
            "tags": {
              "Name": "web"
            },
            "vpc_id": "vpc-04f52da4cdfdeef9f"
          },
          "dependencies": [
            "aws_vpc.kas_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:348320516530:subnet/subnet-0f6246283d2e449a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.0.0/24",
            "id": "subnet-0f6246283d2e449a1",
            "map_public_ip_on_launch": false,
            "owner_id": "348320516530",
            "tags": {
              "Name": "web"
            },
            "vpc_id": "vpc-04f52da4cdfdeef9f"
          },
          "dependencies": [
            "aws_vpc.kas_aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kas_aws",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:348320516530:vpc/vpc-04f52da4cdfdeef9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-09e99fb7f8760c4d9",
            "default_route_table_id": "rtb-041be10e6a69af538",
            "default_security_group_id": "sg-03ae56553f7abb67d",
            "dhcp_options_id": "dopt-620b0605",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04f52da4cdfdeef9f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-041be10e6a69af538",
            "owner_id": "348320516530",
            "tags": {
              "Name": "KAS vpc"
            }
          }
        }
      ]
    }
  ]
}